Use of Stream.toList() method (JDK-8180352)