@@ -1,7 +1,6 @@
 package de.saring.util.gui.javafx.control.calendar;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javafx.scene.control.Label;
 
@@ -29,6 +28,6 @@ class CalendarSummaryCell extends AbstractCalendarCell {
     public void setEntries(final List<String> entries) {
         updateEntryLabels(entries.stream() //
                 .map(entry -> new Label(entry)) //
-                .collect(Collectors.toList()));
+                .toList());
     }
 }
